--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
+#REGISTER
 register.name = Imi\u0119
 register.lastName = Nazwisko
 register.email = Email
 register.password = Has\u0119
+
+#ERROR
 error.register.name = Podaj swoje imi\u0119
