7-first part repair user add

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,45 @@
-#REGISTER
-register.name = Imi\u0119
-register.lastName = Nazwisko
-register.email = Email
-register.password = Has\u0119
+# WSPOLNE
+button.edit=Edycja
+button.save=Zapisz
+button.cancel=Zrezygnuj
 
-#ERROR
-error.register.name = Podaj swoje imi\u0119
+link.poprzedni=Poprzedni
+link.nastepny=Nastêpny
+
+#PAGES
+page.title.index=Strona g³ówna
+page.title.login=Logowanie
+page.title.register=Rejestracja
+
+page.title.back=Powrót
+
+# REGISTER
+register.name=Imi\u0119
+register.lastName=Nazwisko
+register.email=Adres email
+register.password=Has\u0142o
+register.button.register=Zarejestruj
+
+# MENU
+menu.admin.administrator=Administrator
+menu.all.login=Logowanie
+menu.all.register=Rejestracja
+menu.all.logout=Wyloguj
+
+# ADMIN PANEL
+admin.page.title=Panel administratora
+admin.menu.users=U¿ytkownicy
+
+admin.users.id=ID
+admin.users.role=Rola
+admin.users.active=Aktywny
+admin.users.active.yes=TAK
+admin.users.active.no=NIE
+admin.users.role.admin=Administrator
+admin.users.role.user=U¿ytkownik
+admin.users.akcje=Akcje
+admin.users.edit.title=Edycja danych u¿ytkownika
+
+# ERRORS
+error.register.name=Podaj swoje imi\u0119
+
